--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html>
 <body>
 
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
-
-
-
